docker/k8s/tempus-aws-helmchart/tempus-ingress/ingress-tempus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: tempus-ingress
  namespace: default
spec:
  rules:
  - host: tempus.hashmapinc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tempus-svc
          servicePort: 8080
      - path: /nifi
        backend:
          serviceName: nifi-svc
          servicePort: 9090
  tls:
  - hosts:
    - tempus.hashmapinc.com
